--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Perritos
+    <title>Perritos</title>
 </head>
 
 <body>
     <h1>Perritos</h1>
     <section>
         <h2>Perritos aleatorios</h2>
-
+        <article>
             <img id=image1 alt="">
             <button id="btn1">Guardar en favoritos</button>
         </article>
         <article>
             <img id="image2" alt="">
-            <button idl="btn2">Guardar en favoritos</button>
+            <button id="btn2">Guardar en favoritos</button>
         </article>
-        <article/>
+        <article>
             <img id="image3" alt="">
             <button id="btn3">Guardar en favoritos</button>
         </article>
@@ -29,6 +28,5 @@
         <button id="reload">Recargar</button>
     </section>
     
-    <script src="./index.js"></script>
 </body>
 </html>
