--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Perritos</title>
 </head>
 
@@ -28,5 +29,6 @@
         <button id="reload">Recargar</button>
     </section>
     
+    <script src="./index.js"></script>
 </body>
 </html>
